--- a/src/Translation/locales/es.json
+++ b/src/Translation/locales/es.json
@@ -69,19 +69,26 @@
     "connect": "Conexión",
     "connecting": "Conectando",
     "contributions": "Contribuciones",
+    "expired_at": "Caducado {time}",
+    "expires_in": "Caduca {time}",
+    "expires_in_more_than_years": "Caduca en más de {years} años",
     "for": "para",
     "loading": "Cargando",
     "marketplace": "Mercado",
+    "mortgage": "Hipoteca",
+    "mortgages": "Hipotecas",
     "owned_by": "Controlada por",
     "owned_by_link": "Controlada por {address_link}",
     "parcels": "Parcelas",
     "profile": "Mi LAND",
+    "request": "Solicitud",
     "retry": "Reintentar",
     "revoke": "Revocar",
     "settings": "Configuración",
     "sign_in": "Conectar",
     "sign_in_notice": "Necesitas {sign_in_link} para acceder a esta página",
     "submit": "Enviar",
+    "time_left": "Tiempo restante",
     "unauthorized": "No autorizado",
     "undo": "Deshacer",
     "wallet_address": "Dirección de billetera",
@@ -109,6 +116,37 @@
       "close_to_expire": "Por terminar",
       "newest": "Más nuevas"
     }
+  },
+  "mortgage": {
+    "amount": "Cantidad",
+    "amount_placeholder": "Monto en MANA",
+    "cancel": "Cancelar hipoteca",
+    "duration": "Duración",
+    "duration_placeholder": "Duración en días",
+    "errors": {
+      "amount_minimum": "La cantidad debe ser mayor que {amount}",
+      "duration_gte_payable":
+        "La duración debe ser mayor o igual que la paga en días",
+      "maximum_interest_rate": "La tasa debe ser inferior a {maximum}",
+      "minimum_duration": "La duración debe ser mayor a {minimum} días",
+      "minimum_interest_rate": "La tasa debe ser mayor que {minimum}",
+      "minimum_payable": "Pagable en debe ser mayor que {minimum} días",
+      "parcel_price":
+        "La cantidad requerida debe ser menor que el precio del paquete"
+    },
+    "expiration": "Solicitud de caducidad",
+    "expiration_placeholder": "Fecha de vencimiento de la hipoteca",
+    "interest_rate": "Tasa de interés",
+    "interest_rate_placeholder": "Tasa de interés",
+    "oracle": "Dirección del contrato de Oracle",
+    "payable": "Pagadero a",
+    "payable_placeholder": "Pagable en días",
+    "punitory_rate": "Tasa de interés punitiva",
+    "punitory_rate_placeholder": "Tasa punitiva",
+    "request": "Solicitar una hipoteca",
+    "request_land":
+      "Está a punto de solicitar una hipoteca por {parcel_name} valorada en {parcel_price}",
+    "requested": "Pedido"
   },
   "parcel": {
     "no_description": "Sin descripción",
@@ -157,8 +195,8 @@
     },
     "publication": {
       "buy": "Comprar",
-      "price": "Precio",
-      "time_left": "Tiempo Disponible"
+      "mortgage": "Solicitar hipoteca",
+      "price": "Precio"
     },
     "tags": {
       "title": "Contexto"
@@ -228,9 +266,6 @@
   "publication": {
     "acquired_at": "Adquirida en {date}",
     "canceled": "Cancelada",
-    "expired_at": "Expiró {time}",
-    "expires_in": "Expira {time}",
-    "expires_in_more_than_years": "Expira en más de {years} años",
     "sold": "Vendida",
     "view": "Ver"
   },
@@ -239,6 +274,10 @@
       "Autorizar al {marketplace_contract_link} a operar MANA por tu cuenta",
     "approve_mana_check":
       "Marcando autoriza el uso de MANA al contrato de Mercado",
+    "approve_mortgage_mana":
+      "Autorice a {mortgage_contract_link} para operar MANA en su nombre",
+    "approve_mortgage_rcn":
+      "Autorice el {mortgage_contract_link} ​​para operar RCN en su nombre",
     "authorization": "Autorización",
     "authorize":
       "Autorizar al {marketplace_contract_link} a operar MANA por tu cuenta",
@@ -249,9 +288,15 @@
     "mana_approved":
       "Has autorizado al {marketplace_contract_link} a operar MANA por tu cuenta",
     "marketplace_contract": "Contrato de Mercado",
+    "mortgage_creator_contract": "Contrato de creador hipotecario",
+    "mortgage_manager_contract": "Contrato de administrador hipotecario",
     "pending_tx": "Tienes una transacción pendiente",
     "unauthorize_land_check":
       "Desmarcando desautoriza el uso de LAND al contrato de Mercado",
+    "you_approved_mortgage_mana":
+      "Usted ha autorizado el {mortgage_contract_link} ​​para operar MANA en su nombre",
+    "you_approved_mortgage_rcn":
+      "Usted ha autorizado {mortgage_contract_link} para operar RCN en su nombre",
     "you_authorized":
       "Has autorizado al {marketplace_contract_link} a operar MANA por tu cuenta"
   },
@@ -268,6 +313,10 @@
     "buy": "Has comprado {parcel_link}",
     "buy_mana": "Has comprado {mana} MANA",
     "cancel": "Has cancelado {publication_link} de {parcel_link}",
+    "cancel_mortgage":
+      "Usted cancela una hipoteca para comprar el paquete {parcel_link}",
+    "create_mortgage":
+      "Solicitó una hipoteca para comprar el paquete {parcel_link}",
     "disapproved":
       "Has desautorizado al {marketplace_contract_link} para operar MANA por tu cuenta.",
     "edit":
@@ -276,6 +325,10 @@
       "Le dio {address_link} permiso para actualizar el contenido de {parcel_link}",
     "manage_revoked":
       "Ha revocado el permiso {address_link} para actualizar el contenido de {parcel_link}",
+    "mortgage_mana":
+      "Usted {action} el {mortgage_contract_link} para operar MANA en su nombre.",
+    "mortgage_rcn":
+      "Usted {action} el {mortgage_contract_link} para operar RCN en su nombre.",
     "publish": "Has publicado {parcel_link}",
     "transfer": "Has transferido {parcel_link} a {owner_link}",
     "transfer_mana": "Has transferido {mana} MANA a {address_link}"
