feat: add date to EstateCard and start the ParcelTags with estates support

--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -259,6 +259,10 @@
     "sold": "Sold",
     "view": "View"
   },
+  "estate": {
+    "acquired_at": "Acquired at {date}",
+    "created_at": "Created at {date}"
+  },
   "estate_select": {
     "selection": "Select the parcels for your new Estate"
   },
